--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 body {
   margin: 0;
-  background-color: rgb(18, 175, 228);
+  background-color: rgb(4, 151, 243);
   color: white;
   margin: 0px;
   border: 0px;
@@ -59,7 +59,8 @@ h1 {
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  height: 90vh;
+  height: 85vh;
+  color: rgb(243, 238, 238);
 }
 .home-left {
   width: 50vw;
@@ -277,8 +278,10 @@ a {
   gap: 10px; /* spacing between buttons */
 }
 #mypdf {
+  
   border-radius: 20px;
   margin: 25px;
   height: "100px";
   width: "100px";
 }
+
