--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 @import url("https://fonts.cdnfonts.com/css/google-sans");
 * {
   font-family: "Product Sans", sans-serif;
+  box-sizing: border-box;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
 }
 
 body {
@@ -108,6 +111,7 @@ h1 {
   padding: 50px;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   text-align: center;
   align-items: center;
   font-weight: bold;
