--- a/style.css
+++ b/style.css
@@ -1,16 +1,19 @@
 @import url("https://fonts.cdnfonts.com/css/google-sans");
 * {
   font-family: "Product Sans", sans-serif;
-  box-sizing: border-box;
-  overflow-wrap: break-word;
+  box-sizing: border-box; /*change*/
+
+  overflow-wrap: break-word; /*change*/
 }
 
 body {
   margin: 0;
   background-color: rgb(4, 151, 243);
   color: white;
+  width: 100%;
   margin: 0px;
   border: 0px;
+  flex-wrap: wrap;
 }
 
 h1 {
@@ -18,11 +21,16 @@ h1 {
   font-weight: 300px;
 }
 
-p{
+p {
   font-size: 20px;
 }
 
+/*#mn {
+  color: black;
+  font-size: large;
 
+  margin: 20px;
+}*/
 .navbar {
   display: flex;
   flex-direction: row;
@@ -41,7 +49,7 @@ p{
 .navbar-right {
   padding-right: 20px;
   display: flex;
-  flex-direction: row;
+
   align-items: center;
 }
 
@@ -65,7 +73,7 @@ p{
   color: rgb(243, 238, 238);
 }
 .home-left {
- width: 50vw;
+  width: 50vw;
   text-align: center;
   justify-content: center;
   padding-left: 200px;
@@ -114,9 +122,10 @@ p{
 }
 .project {
   padding: 50px;
+  padding-bottom: 50px;
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
+  flex-wrap: wrap; /*chnage*/
   text-align: center;
   align-items: center;
   font-weight: bold;
@@ -136,7 +145,7 @@ button {
   background-color: rgb(217, 216, 215);
 }
 #occupation {
-  font-size: 50px;
+  font-size: 60px;
   color: rgb(238, 7, 142);
   -webkit-text-stroke: 1px black;
 }
@@ -256,7 +265,7 @@ h1:hover {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  gap: 25px;
+  gap: 15px;
 }
 
 .pr:hover {
@@ -287,7 +296,6 @@ a {
   gap: 10px; /* spacing between buttons */
 }
 #mypdf {
-  
   border-radius: 20px;
   margin: 25px;
   height: "100px";
